--- a/manifest.json
+++ b/manifest.json
@@ -10,14 +10,17 @@
 			   "32": "img/icon32.png",
 			   "48": "img/icon48.png",
 			   "64": "img/icon64.png",
-			   "96": "img/icon96.png",
 			  "128": "img/icon128.png" },
 	"permissions": ["tabs", "storage", "https://portals.veracross.com/"],
 	"content_scripts":
 	[
 		{
 			"matches": ["https://portals.veracross.com/*/student", "https://portals.veracross.com/*/student?id=*"],
-			"js": ["/js/jquery-3.2.1.min.js", "/js/content-homepage.js"]
+			"js": ["/js/jquery-3.2.1.min.js", "/js/basic.js", "/js/css-settings.js", "/js/content-homepage.js"]
+		},
+		{
+			"matches": ["https://portals.veracross.com/*/student/classes/*/grade_detail"],
+			"js": ["/js/jquery-3.2.1.min.js", "/js/basic.js", "/js/css-settings.js", "/js/content-class-grade.js"]
 		}
 	],
 	"web_accessible_resources": ["/js/*.js", "/img/*.png"]
