--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Veracross Student Extension",
 	"short_name": "VSE",
 	"author": "EmOwen4",
-	"version": "2.3.0",
+	"version": "3.0.0",
 	"description": "The extension for Veracross student clients.",
 	"homepage_url": "https://github.com/emowen/Veracross-Student-Extension",
 	"icons": {
@@ -15,8 +15,7 @@
 	},
 	"permissions": ["tabs", "storage", "https://portals.veracross.com/", "https://portals-app.veracross.com/"],
 	"content_scripts": [{
-			"matches": ["https://portals.veracross.com/*/student", "https://portals.veracross.com/*/student?id=*",
-                        "https://portals-app.veracross.com/*/student", "https://portals-app.veracross.com/*/student?id=*"],
+			"matches": ["https://portals.veracross.com/*/student", "https://portals.veracross.com/*/student/student/overview"],
 			"js": ["/js/jquery-3.2.1.min.js", "/js/echarts.min.js", "/js/basic.js", "/js/css-settings.js", "/js/content-homepage.js"]
 		},
 		{
