--- a/manifest.json
+++ b/manifest.json
@@ -16,14 +16,12 @@
 	"permissions": ["tabs", "storage", "https://portals.veracross.com/", "https://portals-app.veracross.com/"],
 	"content_scripts": [{
 			"matches": ["https://portals.veracross.com/*/student", "https://portals.veracross.com/*/student/student/overview"],
-			"js": ["/js/jquery-3.2.1.min.js", "/js/echarts.min.js", "/js/basic.js", "/js/css-settings.js", "/js/content-homepage.js"]
+			"js": ["/js/jquery-3.2.1.min.js", "/js/echarts.min.js", "/js/common.js", "/js/css-settings.js", "/js/content-notifier.js"]
 		},
 		{
-			"matches": ["https://portals.veracross.com/*/student/classes/*/grade_detail",
-                        "https://portals.veracross.com/*/student/classes/*/grade_detail?vse-details",
-                        "https://portals-app.veracross.com/*/student/classes/*/grade_detail",
-                        "https://portals-app.veracross.com/*/student/classes/*/grade_detail?vse-details"],
-			"js": ["/js/jquery-3.2.1.min.js", "/js/echarts.min.js", "/js/basic.js", "/js/css-settings.js", "/js/content-class-grade.js"]
+			"matches": ["https://portals.veracross.com/*/student/student/*/classes/*/grade_detail",
+				"https://portals.veracross.com/*/student/student/*/classes/*/grade_detail?vse-details"],
+			"js": ["/js/jquery-3.2.1.min.js", "/js/echarts.min.js", "/js/common.js", "/js/css-settings.js", "/js/content-class-grade.js"]
 		}
 	],
 	"web_accessible_resources": ["/js/*.js", "/img/*.png"]
