--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,68 @@
 {
-	"manifest_version": 2,
-	"name": "Veracross Student Extension",
-	"short_name": "VSE",
-	"author": "EmOwen4",
-	"version": "3.0.0",
-	"description": "The extension for Veracross student clients.",
-	"homepage_url": "https://github.com/emowen/Veracross-Student-Extension",
-	"icons": {
-		"16": "img/icon16.png",
-		"32": "img/icon32.png",
-		"48": "img/icon48.png",
-		"64": "img/icon64.png",
-		"128": "img/icon128.png"
-	},
-	"permissions": ["tabs", "storage", "https://portals.veracross.com/", "https://portals-app.veracross.com/"],
-	"content_scripts": [{
-			"matches": ["https://portals.veracross.com/*/student", "https://portals.veracross.com/*/student/student/overview"],
-			"js": ["/js/jquery-3.2.1.min.js", "/js/echarts.min.js", "/js/common.js", "/js/css-settings.js", "/js/content-notifier.js"]
-		},
-		{
-			"matches": ["https://portals.veracross.com/*/student/student/*/classes/*/grade_detail",
-				"https://portals.veracross.com/*/student/student/*/classes/*/grade_detail?vse-details"],
-			"js": ["/js/jquery-3.2.1.min.js", "/js/echarts.min.js", "/js/common.js", "/js/css-settings.js", "/js/content-class-grade.js"]
-		}
-	],
-	"web_accessible_resources": ["/js/*.js", "/img/*.png"]
+  "manifest_version": 2,
+  "name": "Veracross Student Extension",
+  "short_name": "VSE",
+  "author": "EmOwen4",
+  "version": "3.0.0",
+  "description": "The extension for Veracross student clients.",
+  "homepage_url": "https://github.com/emowen/Veracross-Student-Extension",
+  "icons": {
+    "16": "images/icon16.png",
+    "32": "images/icon32.png",
+    "48": "images/icon48.png",
+    "64": "images/icon64.png",
+    "128": "images/icon128.png"
+  },
+  "permissions": [
+    "tabs",
+    "storage",
+    "https://portals.veracross.com/"
+  ],
+  "content_scripts": [
+    {
+      "matches": [
+        "https://portals.veracross.com/*/student",
+        "https://portals.veracross.com/*/student/student/overview"
+      ],
+      "css": [
+        "/css/jquery-ui.min.css",
+        "/css/jquery-ui.structure.min.css",
+        "/css/jquery-ui.theme.min.css"
+      ],
+      "js": [
+        "/js/jquery-3.2.1.min.js",
+        "/js/jquery-ui.min.js",
+        "/js/echarts.min.js",
+        "/js/css-settings.js",
+        "/js/common.js",
+        "/js/content-notifier.js"
+      ],
+      "run_at": "document_start"
+    },
+    {
+      "matches": [
+        "https://portals.veracross.com/*/student/student/*/classes/*/grade_detail",
+        "https://portals.veracross.com/*/student/student/*/classes/*/grade_detail?vse-details"
+      ],
+      "css": [
+        "/css/jquery-ui.min.css",
+        "/css/jquery-ui.structure.min.css",
+        "/css/jquery-ui.theme.min.css"
+      ],
+      "js": [
+        "/js/jquery-3.2.1.min.js",
+        "/js/jquery-ui.min.js",
+        "/js/echarts.min.js",
+        "/js/css-settings.js",
+        "/js/common.js",
+        "/js/content-class-grade.js"
+      ],
+      "run_at": "document_start"
+    }
+  ],
+  "web_accessible_resources": [
+    "/js/*.js",
+    "/images/*.png",
+    "/css/*.css"
+  ]
 }
